{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 163,
  "lineage": "cdcdd0a9-a175-d923-875c-fbb54b33d237",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:security-group/sg-0cdf78a6d6fef2032",
            "description": "Allow Lambda outbound to MSK",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdf78a6d6fef2032",
            "ingress": [],
            "name": "poc-lambda-sg",
            "name_prefix": "",
            "owner_id": "311278774159",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "poc-lambda-sg"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:security-group/sg-0008863cd9607d3f2",
            "description": "Allow Kafka TLS from Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0008863cd9607d3f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9094
              }
            ],
            "name": "poc-msk-sg",
            "name_prefix": "",
            "owner_id": "311278774159",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "poc-msk-sg"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-msk-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:network-acl/acl-0557eb02f2750fec1",
            "default_network_acl_id": "acl-0557eb02f2750fec1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0557eb02f2750fec1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "311278774159",
            "region": "ap-northeast-2",
            "subnet_ids": [
              "subnet-00403ac6d87a2455d",
              "subnet-05039c83d66590ee6",
              "subnet-068c01f668bd5ccce",
              "subnet-0d10519be318c80d5"
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-default"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-default"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:route-table/rtb-00e9b93561b4dbbdb",
            "default_route_table_id": "rtb-00e9b93561b4dbbdb",
            "id": "rtb-00e9b93561b4dbbdb",
            "owner_id": "311278774159",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-default"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:security-group/sg-04f59e89859876226",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04f59e89859876226",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "311278774159",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-default"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-default"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba16d81b160ba1fe",
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:elastic-ip/eipalloc-0ba16d81b160ba1fe",
            "association_id": "eipassoc-09719539c135864fc",
            "domain": "vpc",
            "id": "eipalloc-0ba16d81b160ba1fe",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0fa455b8b3144d26d",
            "private_dns": "ip-10-10-1-169.ap-northeast-2.compute.internal",
            "private_ip": "10.10.1.169",
            "public_dns": "ec2-3-35-202-108.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.202.108",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03eacf3188f428eb0",
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:elastic-ip/eipalloc-03eacf3188f428eb0",
            "association_id": "eipassoc-0252ef29a4ac60ff9",
            "domain": "vpc",
            "id": "eipalloc-03eacf3188f428eb0",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0132ba400bddb8c87",
            "private_dns": "ip-10-10-2-240.ap-northeast-2.compute.internal",
            "private_ip": "10.10.2.240",
            "public_dns": "ec2-43-203-23-87.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.23.87",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2c"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:internet-gateway/igw-04ff4f39eff602b91",
            "id": "igw-04ff4f39eff602b91",
            "owner_id": "311278774159",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba16d81b160ba1fe",
            "association_id": "eipassoc-09719539c135864fc",
            "connectivity_type": "public",
            "id": "nat-0bf4e59dfcc403edc",
            "network_interface_id": "eni-0fa455b8b3144d26d",
            "private_ip": "10.10.1.169",
            "public_ip": "3.35.202.108",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068c01f668bd5ccce",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03eacf3188f428eb0",
            "association_id": "eipassoc-0252ef29a4ac60ff9",
            "connectivity_type": "public",
            "id": "nat-03bb3f04337265bbc",
            "network_interface_id": "eni-0132ba400bddb8c87",
            "private_ip": "10.10.2.240",
            "public_ip": "43.203.23.87",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00403ac6d87a2455d",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2c"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-ap-northeast-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08dff1dbdcc6f6b921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf4e59dfcc403edc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08dff1dbdcc6f6b92",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005d38cf31a9a3f1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03bb3f04337265bbc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-005d38cf31a9a3f1b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04ff4f39eff602b91",
            "id": "r-rtb-01f66a930060ae4991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01f66a930060ae499",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:route-table/rtb-08dff1dbdcc6f6b92",
            "id": "rtb-08dff1dbdcc6f6b92",
            "owner_id": "311278774159",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf4e59dfcc403edc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2a"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:route-table/rtb-005d38cf31a9a3f1b",
            "id": "rtb-005d38cf31a9a3f1b",
            "owner_id": "311278774159",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03bb3f04337265bbc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2c"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:route-table/rtb-01f66a930060ae499",
            "id": "rtb-01f66a930060ae499",
            "owner_id": "311278774159",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ff4f39eff602b91",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-public"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aedf20231e41b05d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08dff1dbdcc6f6b92",
            "subnet_id": "subnet-0d10519be318c80d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075863605676a5fe9",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-005d38cf31a9a3f1b",
            "subnet_id": "subnet-05039c83d66590ee6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0775c72ff693826ce",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01f66a930060ae499",
            "subnet_id": "subnet-068c01f668bd5ccce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73b9e78c760b4f8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-01f66a930060ae499",
            "subnet_id": "subnet-00403ac6d87a2455d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:subnet/subnet-0d10519be318c80d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d10519be318c80d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311278774159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2a"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2a"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:subnet/subnet-05039c83d66590ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05039c83d66590ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311278774159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2c"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-private-ap-northeast-2c"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:subnet/subnet-068c01f668bd5ccce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068c01f668bd5ccce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311278774159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-public-ap-northeast-2a"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-public-ap-northeast-2a"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:subnet/subnet-00403ac6d87a2455d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00403ac6d87a2455d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311278774159",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc-public-ap-northeast-2c"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc-public-ap-northeast-2c"
            },
            "vpc_id": "vpc-0e41bfbd50375a43f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:311278774159:vpc/vpc-0e41bfbd50375a43f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0557eb02f2750fec1",
            "default_route_table_id": "rtb-00e9b93561b4dbbdb",
            "default_security_group_id": "sg-04f59e89859876226",
            "dhcp_options_id": "dopt-04b9ceac8523898a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e41bfbd50375a43f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e9b93561b4dbbdb",
            "owner_id": "311278774159",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc"
            }
          }
        }
      ]
    }
  ]
}